ECOSCOM-4889 DBSearch. Create custom query with limit in db